k8's stuffs/project_deployment_templates/Traefik-Ingress/IngressRoute/Middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: employee-headers
  namespace: employee-info
spec:
  headers:
    accessControlAllowHeaders:
      - "Content-Type"
      - "Authorization"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true  
    allowCredentials: true
