k8's stuffs/project_deployment_templates/Traefik-Ingress/IngressRoute/Middleware2.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-tracebe
  namespace: trace-quickops
spec:
  stripPrefix:
    prefixes:
      - /tracebe
